# mcumgr-client-wrapper

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: upload.py
src/: lib.rs
src/mcumgr_client/: __init__.py
src/mcumgr_client_wrapper/: __init__.py
