[package]
name = "mcumgr-client-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mcumgr_client"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
serde_cbor = "0.11"
anyhow = "1.0"
mcumgr-client = { path = "mcumgr-client" }
