[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mcumgr-client-py"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
Repository = "https://github.com/comap-smart-home/mcumgr-client-py"

[tool.maturin]
bindings = "bin"
python-source = "src"
module-name = "mcumgr_client_wrapper"
manifest-path = "mcumgr-client/Cargo.toml"
