[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mcumgr-client-wrapper"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
# This is edited by the CI when a tag is pushed
# version = "0"
description = "Python bindings for the rust library mcumgr-client"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  { name="Adrien Bruant" },
  { name="Baptiste Cluzel" },
]

[project.urls]
Repository = "https://github.com/comap-smart-home/mcumgr-client-wrapper"

[tool.maturin]
features = ["pyo3/extension-module"]
